# snmalloc

./: .gitignore
.github/workflows/: snmalloc-rust.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  func-bits-check  func-cheri-fast  func-client_meta-check  func-client_meta-fast  func-domestication-check  func-domestication-fast  func-external_pagemap-check  func-first_operation-check  func-first_operation-fast  func-fixed_region-check  func-fixed_region-fast  func-fixed_region_alloc-check  func-fixed_region_alloc-fast  func-jemalloc-check  func-jemalloc-fast  func-malloc-check  func-malloc-fast  func-memcpy-check  func-memcpy-fast  func-memory-fast  func-memory_usage-check  func-memory_usage-fast  func-miracle_ptr-check  func-miracle_ptr-fast  func-multi_atexit-check  func-multi_atexit-fast  func-multi_setspecific-check  func-multi_setspecific-fast  func-multi_threadatexit-check  func-multi_threadatexit-fast  func-pagemap-check  func-pagemap-fast  func-pool-check  func-pool-fast  func-protect_fork-check  func-redblack-check  (+31 more)
docs/: rust_port_architecture.md
snmalloc-rs/: Cargo.toml
snmalloc-rs/benches/: sub_heap.rs
snmalloc-rs/snmalloc-sys/: build.rs
snmalloc-rs/snmalloc-sys/src/: lib.rs
snmalloc-rs/src/: lib.rs
snmalloc-rust/: .gitignore  Cargo.toml  STATUS.md
snmalloc-rust/.cargo/: config.toml
snmalloc-rust/snmalloc/: Cargo.toml
snmalloc-rust/snmalloc-aal/: Cargo.toml
snmalloc-rust/snmalloc-aal/src/: lib.rs
snmalloc-rust/snmalloc-backend/: Cargo.toml
snmalloc-rust/snmalloc-backend/src/: lib.rs
snmalloc-rust/snmalloc-core/: Cargo.toml
snmalloc-rust/snmalloc-core/src/: lib.rs
snmalloc-rust/snmalloc-frontend/: Cargo.toml
snmalloc-rust/snmalloc-frontend/src/: lib.rs
snmalloc-rust/snmalloc-pal/: Cargo.toml
snmalloc-rust/snmalloc-pal/src/: lib.rs
snmalloc-rust/snmalloc-test/: Cargo.toml
snmalloc-rust/snmalloc-test/src/: lib.rs
snmalloc-rust/snmalloc-test/tests/: alloc_sequence.rs  freelist_integrity.rs  sizeclasses.rs
snmalloc-rust/snmalloc/src/: lib.rs
src/snmalloc/override/: rust.cc  subheap.h
src/test/func/sub_heap/: sub_heap.cc
