[package]
name = "snmalloc-backend"
description = "Backend range chain and address-space management for the snmalloc Rust port."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
snmalloc-core = { workspace = true }

[dev-dependencies]
# loom is used for model-checking concurrent access to the backend range chain.
loom = { workspace = true }
