[package]
name = "snmalloc-core"
description = "Core data structures and algorithms for the snmalloc Rust port."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
snmalloc-pal = { workspace = true }
snmalloc-aal = { workspace = true }

[dev-dependencies]
# loom is used for model-checking concurrent code (atomics, MPSC queues,
# combining lock).  Run tests under loom with:
#   RUSTFLAGS="--cfg loom" cargo test -p snmalloc-core
loom = { workspace = true }
